app-test/testdata/typesystem/neg/pattern-matching-alternative-pattern-type/check/patmat.check
Error in "testdata/typesystem/neg/pattern-matching-alternative-pattern-type/src/patmat.cal" on line 7:
                    true : 1 end // error
                    ^^^^
Incompatible types; expected int but was bool.